--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
 			<artifactId>spring-restdocs-mockmvc</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+	        <groupId>org.mongodb</groupId>
+	        <artifactId>mongodb-driver</artifactId>
+	        <version>3.3.0</version>
+    	</dependency>
+		
 	</dependencies>
 
 	<build>
