--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
 	        <artifactId>spring-boot-devtools</artifactId>
 	    </dependency>
 		
+		<dependency>
+	        <groupId>org.mariadb.jdbc</groupId>
+	        <artifactId>mariadb-java-client</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<build>
