--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto=create-drop
 
