--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mariadb://localhost/projekti
-spring.datasource.username=projekti
-spring.datasource.password=myZAx849d
+spring.datasource.url=jdbc:mariadb://localhost/a1503065
+spring.datasource.username=a1503065
+spring.datasource.password=saQYLU99d
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # Show or not log for each sql query
