--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mariadb://localhost/a1503065
-spring.datasource.username=a1503065
-spring.datasource.password=saQYLU99d
+spring.datasource.url=jdbc:mariadb://localhost/a1502999
+spring.datasource.username=a1502999
+spring.datasource.password=loGYZj95c
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # Show or not log for each sql query
