you're a wizard, Harry

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.MasterBranch</groupId>
 	<artifactId>Feedback</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>Feedback</name>
 	<description>Demo project for Spring Boot</description>
@@ -25,6 +25,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+   			 <groupId>org.springframework.boot</groupId>
+   			 <artifactId>spring-boot-starter-tomcat</artifactId>
+   			 <scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -75,11 +80,11 @@
 	</dependencies>
 
 	<build>
-		<plugins>
+		<plugins><!--  
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+				<artifactId>spring-boot-maven-plugin</artifactId> 
+			</plugin>-->
 		</plugins>
 	</build>
 
