--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,14 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         
+        
+        <dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.8.5</version>
+		</dependency>
+        
+        
 	</dependencies>
 
 
