--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mariadb://localhost/projekti
-spring.datasource.username=projekti
-spring.datasource.password=myZAx849d
+spring.datasource.url=jdbc:mariadb://localhost/a1502999
+spring.datasource.username=a1502999
+spring.datasource.password=loGYZj95c
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # Show or not log for each sql query
@@ -9,7 +9,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
